// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example: Print a simple Table with Computed Columns Computed Columns are working 1`] = `
"┌────────────┬─────────────┬─────┬─────────────┬──────────────┬─────┬─────────────┬──────────────┐
│[37m [0m[01mred_amount[0m │[37m [0m[01mblue_amount[0m │[37m [0m[01msum[0m │[37m [0m[01mred_percent[0m │[37m [0m[01mblue_percent[0m │[37m [0m[01msum[0m │[37m [0m[01mred_percent[0m │[37m [0m[01mblue_percent[0m │
├────────────┼─────────────┼─────┼─────────────┼──────────────┼─────┼─────────────┼──────────────┤
│[37m [0m[31m         2[0m │[37m [0m[37m          3[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │
│[37m [0m[31m         1[0m │[37m [0m[37m          1[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │
│[37m [0m[31m         5[0m │[37m [0m[37m          6[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │
└────────────┴─────────────┴─────┴─────────────┴──────────────┴─────┴─────────────┴──────────────┘"
`;

exports[`Example: Print a simple Table with Computed Columns Computed Columns are working with Title 1`] = `
"┌────────────┬─────────────┬─────┬─────────────┬──────────────┬─────┬─────────────┬──────────────┐
│[37m [0m[01mred_amount[0m │[37m [0m[01mblue_amount[0m │[37m [0m[01msum[0m │[37m [0m[01mRed Percent[0m │[37m [0m[01mBlue Percent[0m │[37m [0m[01msum[0m │[37m [0m[01mRed Percent[0m │[37m [0m[01mBlue Percent[0m │
├────────────┼─────────────┼─────┼─────────────┼──────────────┼─────┼─────────────┼──────────────┤
│[37m [0m[31m         2[0m │[37m [0m[37m          3[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │
│[37m [0m[31m         1[0m │[37m [0m[37m          1[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │
│[37m [0m[31m         5[0m │[37m [0m[37m          6[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │
└────────────┴─────────────┴─────┴─────────────┴──────────────┴─────┴─────────────┴──────────────┘"
`;

exports[`Testing computed columns Computed Columns are working 1`] = `
"┌────────────┬─────────────┬─────┬─────────────┬──────────────┬─────┬─────────────┬──────────────┐
│[37m [0m[01mred_amount[0m │[37m [0m[01mblue_amount[0m │[37m [0m[01msum[0m │[37m [0m[01mred_percent[0m │[37m [0m[01mblue_percent[0m │[37m [0m[01msum[0m │[37m [0m[01mred_percent[0m │[37m [0m[01mblue_percent[0m │
├────────────┼─────────────┼─────┼─────────────┼──────────────┼─────┼─────────────┼──────────────┤
│[37m [0m[31m         2[0m │[37m [0m[37m          3[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │
│[37m [0m[31m         1[0m │[37m [0m[37m          1[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │
│[37m [0m[31m         5[0m │[37m [0m[37m          6[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │
└────────────┴─────────────┴─────┴─────────────┴──────────────┴─────┴─────────────┴──────────────┘"
`;

exports[`Testing computed columns Computed Columns are working with Title 1`] = `
"┌────────────┬─────────────┬─────┬─────────────┬──────────────┬─────┬─────────────┬──────────────┐
│[37m [0m[01mred_amount[0m │[37m [0m[01mblue_amount[0m │[37m [0m[01msum[0m │[37m [0m[01mRed Percent[0m │[37m [0m[01mBlue Percent[0m │[37m [0m[01msum[0m │[37m [0m[01mRed Percent[0m │[37m [0m[01mBlue Percent[0m │
├────────────┼─────────────┼─────┼─────────────┼──────────────┼─────┼─────────────┼──────────────┤
│[37m [0m[31m         2[0m │[37m [0m[37m          3[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │
│[37m [0m[31m         1[0m │[37m [0m[37m          1[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │
│[37m [0m[31m         5[0m │[37m [0m[37m          6[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │
└────────────┴─────────────┴─────┴─────────────┴──────────────┴─────┴─────────────┴──────────────┘"
`;

exports[`Testing computed columns should handle complex computations and formatting 1`] = `
"┌───────┬──────────┬────────┬──────────┬─────────────┐
│[37m [0m[01mprice[0m │[37m [0m[01mquantity[0m │[37m [0m[01m total[0m │[37m [0m[01mdiscount[0m │[37m [0m[01mfinal_price[0m │
├───────┼──────────┼────────┼──────────┼─────────────┤
│[37m [0m[37m   20[0m │[37m [0m[37m       2[0m │[37m [0m[37m 40.00[0m │[37m [0m[37m  N/A   [0m │[37m [0m[32m      40.00[0m │
│[37m [0m[37m   50[0m │[37m [0m[37m       3[0m │[37m [0m[37m150.00[0m │[37m [0m[37m  10%   [0m │[37m [0m[32m     135.00[0m │
└───────┴──────────┴────────┴──────────┴─────────────┘"
`;

exports[`Testing computed columns should handle computed columns depending on other computed columns 1`] = `
"┌───────┬─────────┬────────────┬──────────────┐
│[37m [0m[01mvalue[0m │[37m [0m[01mdoubled[0m │[37m [0m[01mquadrupled[0m │[37m [0m[01m     summary[0m │
├───────┼─────────┼────────────┼──────────────┤
│[37m [0m[37m    5[0m │[37m [0m[37m     10[0m │[37m [0m[37m        20[0m │[37m [0m[37m 5 → 10 → 20[0m │
│[37m [0m[37m   10[0m │[37m [0m[37m     20[0m │[37m [0m[37m        40[0m │[37m [0m[37m10 → 20 → 40[0m │
└───────┴─────────┴────────────┴──────────────┘"
`;
